# lifequality

./: README.md  config.py  pyproject.toml  services.py  settings.toml  tor_for_the_project.pages  validation_types.py
backend/: dependencies.py  main.py
backend/routers/: call_records.py  client_requests.py  clients.py  comments.py  consultations.py  contractors.py  contracts.py  employees.py  house_conditions.py  houses.py  likes.py  meetings.py  request_documents.py  request_sources.py  request_statuses.py  users.py  works.py
database/: :wq  __init__.py  migration_settings.py  models_associations.py
database/call_records/: crud.py  models.py  schemas.py
database/client_requests/: crud.py  models.py  schemas.py
database/clients/: crud.py  models.py  schemas.py
database/comments/: crud.py  models.py  schemas.py
database/conditions/: crud.py  models.py
database/consultations/: crud.py  models.py  schemas.py
database/contractors/: crud.py  models.py  schemas.py
database/contracts/: crud.py  models.py  schemas.py
database/employees/: crud.py  models.py  schemas.py
database/house_conditions/: crud.py  models.py  schemas.py
database/houses/: crud.py  models.py  schemas.py
database/likes/: crud.py  models.py  schemas.py
database/meetings/: crud.py  models.py  schemas.py
database/request_documents/: crud.py  models.py  schemas.py
database/request_sources/: crud.py  models.py  schemas.py
database/request_statuses/: crud.py  models.py  schemas.py
database/users/: crud.py  models.py  (+1 more)
frontend/: package-lock.json
migrations/: env.py
(+42 files in other folders)
