[tool.poetry]
name = "lifequality"
version = "0.1.0"
description = "Web application: platform for working with requests from residents of an apartment building"
authors = ["mininscode <mininscode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
