[tool.poetry]
name = "lifequality"
version = "0.1.0"
description = "Web application: platform for working with requests from residents of an apartment building"
authors = ["mininscode <mininscode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
